# docker-stacks

./: LICENSE
japanese-nlp-notebook/: Dockerfile  README.md  pyproject.toml
