[tool.poetry]
name = "japanese_nlp_notebook"
version = "0.1.0"
description = ""
authors = ["Shinichi Takayanagi <shinichi.takayanagi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
SudachiPy = "^0.6.3"
SudachiDict-full = "^20211220"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
